# cmake_template

./: CMakeLists.txt
cal/: CMakeLists.txt  cal.cc
include/: cal.h
libs/: cal.lib
src/: config.cc  config.h  hello.cc
